# hardware_interfaces

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.ros  LICENSE.md  README.md  package.xml  setup.py  todo
applications/force_control_demo/: CMakeLists.txt
applications/force_control_demo/config/: force_control_demo.yaml
applications/force_control_demo/src/: demo_with_coinft.cc  demo_with_ur.cc  main.cc
applications/ft_calibration/: CMakeLists.txt
applications/ft_calibration/config/: ft_calibration.yaml
applications/ft_calibration/scripts/: compute_sensor_tool.py
applications/ft_calibration/src/: main.cc
applications/manipulation_data_collection/: CMakeLists.txt
applications/manipulation_data_collection/scripts/: plot.py
applications/manipulation_data_collection/src/: main.cc
config/: default.yaml
hardware/arx_can/include/arx_can/: arx_can.h
hardware/arx_can/src/: arx_can.cpp
hardware/ati_netft/: CMakeLists.txt
hardware/ati_netft/include/ati_netft/: ati_netft.h
hardware/ati_netft/include/netft_rdt_driver/: netft_rdt_driver.h
hardware/ati_netft/src/: ati_netft.cpp  netft_rdt_driver.cpp
hardware/coinft/: CMakeLists.txt
hardware/coinft/config/: UFT3_MLP_4L_scl_1_30.onnx  UFT4_MLP_4L_scl_1_30.onnx
hardware/coinft/include/: CoinFT.h
hardware/coinft/include/coinft/: CoinFTBus.h  coin_ft.h
hardware/coinft/src/: CoinFT.cpp  CoinFTBus.cpp  calMat_UFT6.csv  coin_ft.cpp  coinft_bus_interface.cpp  coinft_interface.cpp  coinft_test.cpp  coinft_test_multithread.cpp
hardware/gopro/: CMakeLists.txt
hardware/gopro/include/gopro/: gopro.h
hardware/gopro/src/: gopro.cpp  test.cpp
hardware/oak/: CMakeLists.txt
hardware/oak/include/oak/: oak.h
hardware/oak/src/: oak.cpp  test.cpp
hardware/realsense/: CMakeLists.txt
hardware/realsense/include/realsense/: realsense.h
hardware/realsense/src/: realsense.cpp
hardware/robotiq_ft_modbus/driver/src/: main.c  rq_sensor_socket.c
hardware/robotiq_ft_modbus/include/robotiq_ft_modbus/: robotiq_ft_modbus.h
hardware/robotiq_ft_modbus/src/: robotiq_ft_modbus.cpp  robotiq_ft_modbus_pybind.cpp
hardware/ur_rtde/: CMakeLists.txt
hardware/ur_rtde/include/ur_rtde/: ur_rtde.h
hardware/ur_rtde/src/: test.cpp  ur_rtde.cpp
hardware/wsg_gripper/: CMakeLists.txt  README.md
hardware/wsg_gripper/include/wsg_gripper/: WSG50Communicator.h  WSG50Controller.h  WSG50Observer.h  WSG50Subject.h  wsg_gripper.h  wsg_gripper_driver.h
hardware/wsg_gripper/src/: WSG50Communicator.cpp  WSG50Controller.cpp  WSG50Subject.cpp  cmd_customized_controllers.lua  cmd_measure.lua  test.cpp  wsg_gripper.cpp  wsg_gripper_driver.cpp
include/: EGMClass.h
include/egm/: EGMClass.h  utilities.h
include/hardware_interfaces/: camera_interfaces.h  delta_interfaces.h  ft_interfaces.h  js_interfaces.h  robot_delta_interfaces.h  robot_interfaces.h  socket.hpp  types.h
launch/: delta_dji_test.launch  ur_test.launch
rapid/120_rw6_YIFAN_EGM/: system.xml
rapid/120_rw6_YIFAN_EGM/BACKINFO/: backinfo.txt  controller.rsf  fpsystem.xml  key.id  program.id  rw6system.xml  system.guid  template.guid  version.xml
rapid/120_rw6_YIFAN_EGM/BACKINFO/license/: license_120-502422.rlf
rapid/120_rw6_YIFAN_EGM/CS/: ctrlsettings.xml  uas_groups.xml  uas_users.xml
rapid/120_rw6_YIFAN_EGM/RAPID/TASK1/PROGMOD/: SERVER.mod  SPECIAL_COMMANDS.mod
rapid/120_rw6_YIFAN_EGM/RAPID/TASK1/SYSMOD/: LINKEDM.sys
rapid/120_rw6_YIFAN_EGM/SYSPAR/: EIO.cfg  MMC.cfg  MOC.cfg  SIO.cfg  SYS.cfg
robots/abb_egm/: CMakeLists.txt  README.md
robots/abb_egm/include/abb_egm/: abb_egm.h  egm.pb.h
robots/abb_egm/proto/: egm.proto
robots/abb_egm/rapid/TASK2/PROGMOD/: INIT.mod
robots/abb_egm/rapid/TASK3/PROGMOD/: LOGGER.mod
robots/abb_egm/rapid/TASK4/PROGMOD/: EGM_test_UDP.mod
robots/abb_egm/src/: abb_egm.cpp
robots/abb_egm/src/practical_socket/: PracticalSocket.cpp
robots/arx_can/: CMakeLists.txt
robots/arx_can/include/arx_can/: arx_can.h
robots/arx_can/src/: arx_can.cpp
robots/ati_netft/: CMakeLists.txt
robots/ati_netft/include/ati_netft/: ati_netft.h
robots/ati_netft/include/netft_rdt_driver/: netft_rdt_driver.h
robots/ati_netft/src/: ati_netft.cpp  netft_rdt_driver.cpp
robots/delta_dji/: CMakeLists.txt
robots/delta_dji/include/delta_dji/: delta_dji.h
robots/delta_dji/src/: delta_dji.cpp  test_delta_dji.cpp
robots/gopro/include/gopro/: gopro.h
robots/gopro/src/: gopro.cpp  usbreset.cpp
robots/realsense/: CMakeLists.txt
robots/realsense/include/realsense/: cv-helpers.hpp  realsense.h
robots/realsense/src/: realsense.cpp
robots/robotiq_ft_modbus/: CMakeLists.txt
robots/robotiq_ft_modbus/include/robotiq_ft_modbus/: robotiq_ft_modbus.h
robots/robotiq_ft_modbus/src/: robotiq_ft_modbus.cpp
robots/ur_rtde/: CMakeLists.txt
robots/ur_rtde/include/ur_rtde/: ur_rtde.h
robots/ur_rtde/src/: test.cpp  ur_rtde.cpp
robots/ur_socket/: CMakeLists.txt  client.cpp
robots/ur_socket/include/ur_socket/: ur_socket.h
robots/ur_socket/src/: test.cpp  ur_socket.cpp
robots/ur_socket/ut/: CMakeLists.txt  client.cpp
src/: EGMClass.cpp  delta_interfaces.cpp  types.cpp
src/practical_socket/: PracticalSocket.cpp
test/: main.cc
test/key_detection/: key_detection.cc
workcell/table_top_manip/: CMakeLists.txt
workcell/table_top_manip/config/: belt_assembly.yaml  bimanual_data_collection.yaml  bimanual_evaluation.yaml  left_arm_residual.yaml  left_arm_rl.yaml  right_arm_coinft.yaml  right_arm_coinft_data_collection.yaml  single_arm_data_collection.yaml  single_arm_evaluation.yaml  single_arm_wsg.yaml
workcell/table_top_manip/include/: manip_server.h
workcell/table_top_manip/include/table_top_manip/: manip_server.h  perturbation_generator.h
workcell/table_top_manip/python/: test.py  test_bimanual.py  test_multi_thread.py
workcell/table_top_manip/src/: helpers.hpp  manip_server.cc  manip_server_loops.cc  manip_server_pybind.cc  perturbation_generator.cc
workcell/test/: CMakeLists.txt
workcell/test/include/test/: test_server.h
workcell/test/src/: test_server.cc  test_server_pybind.cc
